# golf-swing-analyzer

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: feature-branch-workflow.mdc  specify-rules.mdc
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  project-context.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
config/: default.toml.example
specs/001-foundation-and-dev-environment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-foundation-and-dev-environment/checklists/: requirements.md
specs/001-foundation-and-dev-environment/contracts/: cli-commands.md  diagnostic-report.schema.json
src/swing_analyzer/: __init__.py  __main__.py  cli.py
src/swing_analyzer/app/: health.py
src/swing_analyzer/config/: settings.py
src/swing_analyzer/diagnostics/: report.py  runner.py  version.py
src/swing_analyzer/diagnostics/checks/: ffmpeg.py  gpu.py  mediapipe.py  opencv.py  storage.py
src/swing_analyzer/logging/: setup.py
tests/: conftest.py
tests/contract/: test_diagnostic_schema.py
tests/integration/: test_cli.py  test_diagnostic_runner.py
tests/unit/: test_checks.py  test_checks_extra.py  test_diagnostic_report.py  test_gpu.py  test_health.py  test_logging.py  test_main.py  test_settings.py  test_version.py
